--- a/view/room.html
+++ b/view/room.html
@@ -1,44 +1,17 @@
-<div id="roomContainer">
-  <div id="eventContainer">
-    <div id="eventTitle">The stare at the air competition</div>
-    <div id="eventDescription">anyone want to spend time meaninglessly feel free to join</div>
-    <div class="eventContentItem">
-      <span class="eventContentItemLabel">Location</span>
-      <span>Here</span>
-    </div>
-    <div class="eventContentItem">
-      <span class="eventContentItemLabel">Date</span>
-      <span>10.01.2022</span>
-    </div>
-    <div class="eventContentItem">
-      <span class="eventContentItemLabel">Time</span>
-      <span>2pm to 6pm (starting in x minutes)</span>
-    </div>
-    <div class="eventContentItem">
-      <span class="eventContentItemLabel">Participants</span>
-      <span>Raphael (Organizer), Gabriel, Naz, and other 8 people</span>
-    </div>
-  </div>
-  <div id="commentContainer">
-    <span>Comments</span>
-    <div id="commentList">
+<div id="chatContainer">
+  <span>Slack</span>
+  <div id="chatList">
 
-    </div>
-    <div id="commentInput">
-      <input type="text" id="commentContent"/>
-      <button id="commentPostButton" onclick="sendChat()">Send</button>
-    </div>
   </div>
-  <div id="optionsContainer">
-    <button id="inviteButton">Invite</button>
-    <button id="shareButton">Share</button>
-    <button id="cancelButton">Cancel Attendance</button>
+  <div id="chatInput">
+    <input type="text" id="chatContent"/>
+    <button id="chatPostButton" onclick="sendChat()">Send</button>
   </div>
 </div>
 
-<template id="newComment">
-  <div class="commentContainer">
-    <span class="commentContent"></span>
+<template id="newChat">
+  <div class="chatContainer">
+    <span class="chatContent"></span>
   </div>
 </template>
 
