--- a/view/room.html
+++ b/view/room.html
@@ -1,16 +1,21 @@
 <div id="chatContainer">
-  <span>Slack</span>
+  <img id="chatLogo" src="/img/slack_logo.jpg" alt="...">
   <div id="chatList">
 
   </div>
   <div id="chatInput">
-    <input type="text" id="chatContent"/>
-    <button id="chatPostButton" onclick="sendChat()">Send</button>
+    <textarea id="chatContent"></textarea>
+    <button id="chatPostButton" onclick="sendChat()"><i class="fa-solid fa-paper-plane"></i></button>
   </div>
+</div>
+
+<div id="popupContainer">
+  <span><i class="fa-solid fa-bell" onclick="clickPopup()"></i></span>
 </div>
 
 <template id="newChat">
   <div class="chatContainer">
+    <span class="chatSender"></span>
     <span class="chatContent"></span>
   </div>
 </template>
