added bookings.js and bookings GET function to app.js
added bookings.js and bookings GET function to app.js

--- a/view/bookings.html
+++ b/view/bookings.html
@@ -1,11 +1,26 @@
-<div id="listContainer">
-  <div id="listHeader">
-    
-  </div>
-  <div id="listContent">
+<link rel="stylesheet" href="/css/bookings.css">
 
-  </div>
+<div id="listContainer">
+
+  <div id="productivity_msg">Congrats on your progress! You've earned a short break!</div>
+  <div id="location_listing"></div>
+
+  <div id="subject"></div>
+
+  <div id="event-type"></div>
+  <div class="attendees"></div>
+  <div class="accept"></div>
+  <div class="cancel"></div>
 </div>
 
 <link href="/css/bookings.css" rel="stylesheet" />
+
 <script src="/js/bookings.js"></script>
+
+<!-- FOR TOMORROW, ADD CUSTOMIZATION TO EVENTS 
+    <form action="/schedule">
+    <datalist id="event-type">
+        <option value="">
+        <option value="">
+            <submit>Add to Schedule</submit>
+</form> -->
