margin and styling

--- a/view/template.html
+++ b/view/template.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 </head>
 
-<body>
+<body style="margin: 0">
 
   <div id="content"></div>
   
