--- a/public/css/room.css
+++ b/public/css/room.css
@@ -10,6 +10,7 @@
 }
 
 #chatList {
+  margin: 10px;
   overflow-y: scroll;
   word-break: break-all;
 }
@@ -17,6 +18,7 @@
 #chatInput {
   display: grid;
   grid-template-columns: 1fr 50px;
+  margin: 10px;
   height: 50px;
   border: 2px solid grey;
   border-radius: 8px;
@@ -53,8 +55,7 @@
 }
 
 #popupContainer {
-  display: block;
-  position: absolute;
+  position: fixed;
   right: -100px;
   top: 20px;
   z-index: 1;
