added query and JS for location name

--- a/view/bookings.html
+++ b/view/bookings.html
@@ -7,8 +7,9 @@
   <div id="subject"></div>
   <div id="event-type"></div>
   <div class="attendees"></div>
-  <div class="accept"></div>
-  <div class="cancel"></div>
+  <div class="accept">Accept</div>
+  <div class="cancel">Cancel</div>
+  <div class="Custom-invite"></div>
 </div>
 
 <link href="/css/bookings.css" rel="stylesheet" />
