--- a/view/index.html
+++ b/view/index.html
@@ -21,7 +21,7 @@
             <input type="radio" id="remote" name="attendType" value="Remote">
             <label for="remote">Remote</label><br>
             <br>
-            <input id="submit" type="submit" value="Login" />
+            <input id="submit" type="submit" value="Login" onclick="sendLogin()" />
             <!-- <a id="guest" href="/main">Countinue as guest</a> -->
             <p><span id="serverMsg"></span></p>
             <p id="errorMsg">&nbsp;</p>
