--- a/view/index.html
+++ b/view/index.html
@@ -11,21 +11,19 @@
 
 <body>
     <div id="formPanel">
-        <form id="loginForm">
-            <p id="formTitle">Welcome</p>
-            <input id="username" type="text" required="required" placeholder="Username" />
-            <input id="password" type="password" required="required" placeholder="Password" />
-            <br>
-            <input type="radio" id="inPerson" name="attendType" value="In Person">
-            <label for="inPerson">In Person</label><br>
-            <input type="radio" id="remote" name="attendType" value="Remote">
-            <label for="remote">Remote</label><br>
-            <br>
-            <input id="submit" type="submit" value="Login" onclick="sendLogin()" />
-            <!-- <a id="guest" href="/main">Countinue as guest</a> -->
-            <p><span id="serverMsg"></span></p>
-            <p id="errorMsg">&nbsp;</p>
-        </form>
+        <p id="formTitle">Welcome</p>
+        <input id="username" type="text" required="required" placeholder="Username" />
+        <input id="password" type="password" required="required" placeholder="Password" />
+        <br>
+        <input type="radio" id="inPerson" name="attendType" value="In Person">
+        <label for="inPerson">In Person</label><br>
+        <input type="radio" id="remote" name="attendType" value="Remote">
+        <label for="remote">Remote</label><br>
+        <br>
+        <button id="submit" onclick="sendLogin()">login</button>
+        <!-- <a id="guest" href="/main">Countinue as guest</a> -->
+        <p><span id="serverMsg"></span></p>
+        <p id="errorMsg">&nbsp;</p>
     </div>
 
     <!-- <footer id="footer">
