--- a/view/profile.html
+++ b/view/profile.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <div id="profile-picture">
-            <img id="picture_src" src="" alt="profile">
+            <img id="picture_src" src="" alt="profile" class="center">
         </div>
         <br>
         <table id="user_info">
@@ -40,5 +40,5 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
-<script src="/js/profile.js"></script>
+<!-- <script src="/js/profile.js"></script> -->
 <!-- <script src="/js/inventory.js"></script> -->
