made things work

--- a/view/bookings.html
+++ b/view/bookings.html
@@ -3,12 +3,20 @@
 <div id="listContainer">
 
   <div id="productivity_msg">Congrats on your progress! You've earned a short break!</div>
-  <div id="location_listing"></div>
-  <div id="subject"></div>
-  <div id="event-type"></div>
-  <div class="attendees"></div>
-  <div class="accept">Accept</div>
-  <div class="cancel">Cancel</div>
+  <div id="location_listing">
+    Location: <a href="https://www.nytimes.com/games/wordle/index.html">https://www.wordle.com</a><br />
+  </div>
+  <div id="subject">
+    Subject: Wordle<br />
+  </div>
+  <div id="event-type">
+    Event Type: Online<br />
+  </div>
+  <div class="attendees">
+    Attendees: Naz<br />
+  </div>
+  <div class="accept">Accept<br/></div>
+  <div class="cancel">Cancel<br/></div>
   <div class="Custom-invite"></div>
 </div>
 
