--- a/view/slack.html
+++ b/view/slack.html
@@ -20,6 +20,6 @@
   </div>
 </template>
 
-<link href="/css/room.css" rel="stylesheet"/>
+<link href="/css/slack.css" rel="stylesheet"/>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/room.js"></script>
+<script src="/js/slack.js"></script>
