styling + database stabilization

--- a/view/bookings.html
+++ b/view/bookings.html
@@ -4,19 +4,21 @@
 
   <div id="productivity_msg">Congrats on your progress! You've earned a short break!</div>
   <div id="location_listing">
-    Location: <a href="https://www.nytimes.com/games/wordle/index.html">https://www.wordle.com</a><br />
+    Location: 
   </div>
   <div id="subject">
-    Subject: Wordle<br />
+    Subject: 
   </div>
   <div id="event-type">
-    Event Type: Online<br />
+    Event Type: 
   </div>
   <div class="attendees">
-    Attendees: Naz<br />
+    Attendees: Raphael, Naz
   </div>
-  <div class="accept">Accept<br/></div>
-  <div class="cancel">Cancel<br/></div>
+  <div id="btnsContainer">
+    <button id="accept" class="btn">Accept</button>
+    <button id="cancel" class="btn">Cancel</button>
+  </div>
   <div class="Custom-invite"></div>
 </div>
 
