--- a/public/css/bookings.css
+++ b/public/css/bookings.css
@@ -1,10 +1,16 @@
+
+body {
+  font-family: 'Noto Sans';
+}
+
 #listContainer {
   display: grid;
+  justify-items: center;
   grid-template-columns: 1fr;
-  grid-template-rows: 40px 1fr;
+  gap: 40px;
   width: 90%;
   height: 300px;
-  margin: auto;
+  margin: 50px auto 0;
 }
 
 #listHeader {
@@ -15,4 +21,36 @@
 #listContent {
   display: flex;
   background-color: beige;
+}
+
+#btnsContainer {
+  display: flex;
+  gap: 20px;
+}
+
+.btn {
+  width: 100px;
+  height: 50px;
+  border-radius: 5px;
+  background-color: transparent;
+  transition: 0.2s background-color;
+  cursor: pointer;
+}
+
+#accept {
+  border: 1px solid green;
+}
+
+#accept:hover {
+  color: white;
+  background-color: green;
+}
+
+#cancel {
+  border: 1px solid red;
+}
+
+#cancel:hover {
+  color: white;
+  background-color: red;
 }
